Install Twilio and Grape gems

--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -1,5 +1,9 @@
 source 'https://rubygems.org'
 
+# Twilio and micro API for device communication
+gem 'grape'
+gem 'twilio-ruby'
+
 # Use the HAML engine in generators
 gem 'haml-rails'
 
