--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -47,8 +47,9 @@ end
 # gem 'bcrypt-ruby', '~> 3.0.0'
 
 # Use unicorn as the app server
-gem "unicorn-rails"
+# gem "unicorn-rails"
 gem 'unicorn'
+gem 'thin'
 
 # Use Capistrano for deployment
 # gem 'capistrano', group: :development
