Add simple_form with bootstrap generation

--- a/webapp/Gemfile
+++ b/webapp/Gemfile
@@ -11,6 +11,9 @@ gem 'haml-rails'
 gem 'anjlab-bootstrap-rails', :require => 'bootstrap-rails',
                               :github => 'anjlab/bootstrap-rails'
 
+# Use a prettier form DSL
+gem 'simple_form'
+
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '4.0.2'
 
